Se hacen correciones segun el QA en test